# lumping-of-reaction-networks

./: .gitignore  CITATION.cff  LICENSE  README.md  basic_usage.py  example_4_2.py  example_4_3.py  example_section_6.py  lumping_analysis.py  pyproject.toml  requirements-repro.txt
.github/workflows/: tests.yml
examples/: __init__.py  enumerate_reductions_michaelis_menten.py  example_4_2_three_species.py  example_constrained_michaelis_menten.py  example_generic_from_seed.py  example_gpl_row_echelon_ideal_export.py  example_lumping_adapted_system.py  example_proper_lumping_michaelis_menten.py  example_section_6_gpl_replication.py  example_section_6_two_pathway_enzyme.py  search_proper_lumpings_michaelis_menten.py
figures/: README.md  algorithm_flowchart_v7.tex  michaelis_menten_v2.py  proper_lumping_figure.py  type1_type2_figure.py
mathematica/: README.md  replication_critical_variety.wl  two_pathway_enzyme_critical_variety.wl
notes/: verify_ex_mm_reduced_system.py  verify_ex_mm_typo.py  verify_section_5_errors.py  verify_section_5_formulas.py
results/: README.md  replication_minAssChar_22_components.txt  two_pathway_elimination_minAssChar_components.txt  two_pathway_facstd_first5_components.txt
scr/lumping_analysis/: __init__.py  analyzer.py  examples.py  network.py
singular/: README.md  replication_decomposition.sing  two_pathway_enzyme_decomposition.sing
src/lumping_analysis/: __init__.py  analyzer.py  examples.py  generic_lumping.py  (+4 more)
tests/: conftest.py  test_basic.py  test_generic_lumping.py  test_proper_lumping.py  test_two_pathway_enzyme.py
(+1 files in other folders)
