[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumping-analysis"
version = "0.4.0"
description = "Linear lumping analysis for parameter-dependent mass action reaction networks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "J.E. & V.R. & S.S. & S.W."}
]
dependencies = [
  "sympy>=1.12",
  "numpy>=1.20",
  "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
